apps/todo-api-ab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-abdel
  namespace: todo-api-abdel
  labels:
    app: todo-api-abdel
spec:
  type: ClusterIP
  selector:
    app: todo-api-abdel
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
