apps/todo-api-ab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-api-abdel
  namespace: todo-api-abdel
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: todo.abdel
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-api-abdel
            port:
              number: 80
